--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-my.name=anurag
+my.name=anuragBhusari
 spring.datasource.url =jdbc:postgresql://database-1.cnhmmwcfgjht.us-east-1.rds.amazonaws.com:5432/
 spring.datasource.username= postgres
 spring.datasource.password = postgres
